test/cli/test/admission_user_info/kyverno-test.yaml
name: admission-user-info
policies:
- disallow_latest_tag.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: disallow-latest-tag
  resources:
  - myapp-pod1
  result: pass
  rule: require-image-tag
- kind: Pod
  policy: disallow-latest-tag
  resources:
  - myapp-pod2
  result: pass
  rule: require-image-tag
- kind: Pod
  policy: disallow-latest-tag
  resources:
  - myapp-pod3
  result: pass
  rule: require-image-tag
- kind: Pod
  policy: disallow-latest-tag
  resources:
  - myapp-pod1
  result: pass
  rule: validate-image-tag
- kind: Pod
  policy: disallow-latest-tag
  resources:
  - myapp-pod2
  result: pass
  rule: validate-image-tag
- kind: Pod
  policy: disallow-latest-tag
  resources:
  - myapp-pod3
  result: pass
  rule: validate-image-tag
userinfo: user_info.yaml
